Changed wording a bit

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           Welcome to my website! I'm Ivan Kok, a Lehigh University graduate and currently a
           software engineer at Bentley Systems. I mainly work with TypeScript, JavaScript,
           and React, but I'm open to learning new skills and improving on my existing knowledge. 
-          You can check out a sample of my older work with them here under the Projects section,
+          You can check out a sample of my older work under the Projects section,
           but I recommend my Github for more up-to-date projects. 
-          Please feel free to get in touch with me through my contact information under the Contact section.
+          Please feel free to get in touch with me through my contact information down below.
           Thanks for visiting my website!
         </p>
         
@@ -84,7 +84,7 @@
             <p class="email">You can contact me by my email:</p>
             <p class="bolder">ivanjayk@gmail.com (personal)</p>
             <i class="fa fa-phone" style="font-size:36px; transform: translateY(7px);" class="phoneIcon"></i>
-            <p class="phone">My cellphone number is: </p><p class="bolder"> 646-338-9557</p>
+            <p class="phone">My cellphone number is: </p><p class="bolder">646-338-9557</p>
         </div>
     </div>
 
